<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:background="@color/display_background">

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backspace"
                android:textColor="@color/backspace_button"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:stretchColumns="*"
            android:layout_weight="0.65"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:includeFontPadding="false"
                    android:text="@string/clear"
                    android:textAlignment="center"
                    android:textColor="@color/color_orange"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/paren_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/parentheses"
                    android:textColor="@color/blue_text"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/modulo_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/modulo"
                    android:textColor="@color/blue_text"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/division_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/division"
                    android:textColor="@color/blue_text"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/seven_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/seven"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/eight_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/eight"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/nine_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/nine"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/multiply_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/muliply"
                    android:textColor="@color/blue_text"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/four_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/four"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/five_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/five"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/six_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/six"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/minus"
                    android:textColor="@color/blue_text"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/one_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/one"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/two_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/two"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/three_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/three"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/add"
                    android:textColor="@color/blue_text"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/plus_minus_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/plus_minus"
                    android:textColor="@color/gray_text"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/zero_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:fontFamily="sans-serif"
                    android:includeFontPadding="false"
                    android:text="@string/zero"
                    android:textColor="@color/gray_text"
                    android:textSize="28sp" />

                <Button
                    android:id="@+id/decimal_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:includeFontPadding="false"
                    android:text="@string/decimal"
                    android:textColor="@color/gray_text"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/equals_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_border_background"
                    android:includeFontPadding="false"
                    android:text="@string/equals"
                    android:textColor="@android:color/white"
                    android:textSize="30sp" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>